--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="login.html" id="nav">Connexion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="inscription.html" id="nav">Inscription</a>
+                    <a class="nav-link" href="inscrip.html" id="nav">Inscription</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="product-list.html" id="nav">Liste-des-produits</a>
