--- a/contact.html
+++ b/contact.html
@@ -45,21 +45,21 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <h2>Contact Us</h2>
+                <h2>Contactez-nous</h2>
                 <form>
                     <div class="form-group">
                         <label for="name">Full Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter full name">
+                        <input type="text" class="form-control" id="name" placeholder="Nom Complet">
                     </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email">
+                        <input type="email" class="form-control" id="email" placeholder="Email">
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
                         <textarea class="form-control" id="message" rows="3"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Send</button>
+                    <button type="submit" class="btn btn-primary">Envoyer</button>
                 </form>
             </div>
         </div>
