--- a/inscrip.html
+++ b/inscrip.html
@@ -50,18 +50,18 @@
                 <h2>Inscription</h2>
                 <form>
                     <div class="form-group">
-                        <label for="name">Nom Complet</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter full name">
+                        <label for="name" class="text-danger">Nom Complet</label>
+                        <input type="text" class="form-control" id="name" placeholder="Nom Complet">
                     </div>
                     <div class="form-group">
-                        <label for="email">Address Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email">
+                        <label for="email" class="text-danger">Address Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password" class="text-danger">Mot de Pass</label>
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-primary">Envoyer</button>
+                    <button type="submit" class="btn btn-primary" class="text-danger">Envoyer</button>
                 </form>
             </div>
         </div>
