--- a/product-detail.html
+++ b/product-detail.html
@@ -50,8 +50,26 @@
             <div class="col-md-6">
                 <h2>Hp-x2-1030</h2>
                 <p>220.000f CFA</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam hendrerit vestibulum magna, non gravida velit tempor id.</p>
-                <button class="btn btn-primary">Add to Cart</button>
+                <p> hp 1030 <br><br>Core i7 <br> <br> Disque Dur 500Go SSD <br><br> Ram 16 <br><br>  .</p>
+                <button class="btn btn-primary">Ajouter dans le Panier</button>
+            </div>
+            <div class="col-md-6">
+                <img src="img/maxresdefault.jpg" class="img-fluid" alt="Product 1">
+            </div>
+            <div class="col-md-6">
+                <h2>Hp-x2-1030</h2>
+                <p>220.000f CFA</p>
+                <p> MacBook 1030 <br><br>Core i7 <br> <br> Disque Dur 500Go SSD <br><br> Ram 16 <br><br>  .</p>
+                <button class="btn btn-primary">Ajouter dans le Panier</button>
+            </div>
+            <div class="col-md-6">
+                <img src="img/macbook.png" class="img-fluid" alt="Product 1">
+            </div>
+            <div class="col-md-6">
+                <h2>Hp-x2-1030</h2>
+                <p>220.000f CFA</p>
+                <p> MacBook 1030 <br><br>Core i7 <br> <br> Disque Dur 500Go SSD <br><br> Ram 16 <br><br>  .</p>
+                <button class="btn btn-primary">Ajouter dans le Panier</button>
             </div>
         </div>
     </div>
