--- a/product-list.html
+++ b/product-list.html
@@ -53,7 +53,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">hp-x2-1030</h5>
                                 <p class="card-text">220.000f CFA</p>
-                                <a href="#" class="btn btn-primary">View Details</a>
+                                <a href="#" class="btn btn-primary">Voir les Details</a>
                             </div>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Iphone-15-pro</h5>
                                 <p class="card-text">650.000f CFA</p>
-                                <a href="#" class="btn btn-primary">View Details</a>
+                                <a href="#" class="btn btn-primary">Voir les Details</a>
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">SAMSUNG</h5>
                                 <p class="card-text">340.000f CFA</p>
-                                <a href="#" class="btn btn-primary">View Details</a>
+                                <a href="#" class="btn btn-primary">Voir les Details</a>
                             </div>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Tout écouteur téléphone portable</h5>
                                 <p class="card-text">2.000f CFA</p>
-                                <a href="#" class="btn btn-primary">View Details</a>
+                                <a href="#" class="btn btn-primary">Voir les Details</a>
                             </div>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Tout Chargeur téléphone portable</h5>
                                 <p class="card-text">3.000f CFA</p>
-                                <a href="#" class="btn btn-primary">View Details</a>
+                                <a href="#" class="btn btn-primary">Voir les Details</a>
                             </div>
                         </div>
                     </div>
