--- a/inscrip.html
+++ b/inscrip.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="contact">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -72,13 +72,13 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="img/1.jpg" class="d-block w-25">
+            <img src="img/macbook.png" class="d-block w-25">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="img/maxresdefault.jpg" class="d-block w-25">
+            <img src="img/chargeur2.jpg" class="d-block w-25">
           </div>
           <div class="carousel-item">
-            <img src="img/OIF.jpg" class="d-block w-25">
+            <img src="img/ecouter2.jpg" class="d-block w-25">
           </div>
         </div>
         <button class="carousel-co" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
