--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="contact">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html"><img class="icone" src="img/icone.jpg" alt=""></a>
@@ -43,7 +43,7 @@
 
     <!-- Contact Form -->
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" id="contact">
             <div class="col-md-6">
                 <h2>Contactez-nous</h2>
                 <form>
