--- a/inscrip.html
+++ b/inscrip.html
@@ -71,13 +71,13 @@
 
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
+          <div class="carousel-item active d-flex justify-content-center" data-bs-interval="10000">
             <img src="img/macbook.png" class="d-block w-25">
           </div>
-          <div class="carousel-item" data-bs-interval="2000">
+          <div class="carousel-item d-flex justify-content-center" data-bs-interval="2000">
             <img src="img/chargeur2.jpg" class="d-block w-25">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item d-flex justify-content-center">
             <img src="img/ecouter2.jpg" class="d-block w-25">
           </div>
         </div>
