--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - E-commerce</title>
+    <title>DIALLO-DIGITAL</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
@@ -47,8 +47,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <marquee behavior="" direction=""><h1 class="text-danger">Bienvenue Chez DIALLO-DIGITAL!</h1></marquee>
-                <p class="text-danger">Trouvez les meilleurs appareils ici.</p>
+                <marquee behavior="" direction=""><h1 class="text-primary">Bienvenue Chez DIALLO-DIGITAL!</h1></marquee>
+                <p class="text-primary">Trouvez les meilleurs appareils ici.</p>
             </div>
         </div>
         <!-- ---------------------------carousel------------------------------- -->
@@ -61,33 +61,33 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/1.jpg" alt="" class="d-block">
+                <img src="img/m1.jpeg" alt="" class="d-block">
                 <div class="carousel-caption d-none d-md-block">
-                  <p class="text-danger">Les ordinateurs hp de tout type.</p>
+                  <p class="text-primary">Les ordinateurs hp de tout type.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/maxresdefault.jpg" class="d-block ">
+                <img src="img/hp1.jpeg" class="d-block ">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="text-danger">HP x2 1030 de tout type.</p>
+                    <p class="text-primary">HP x2 1030 de tout type.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/OIF.jpg" class="d-block ">
+                <img src="img/i1.jpeg" class="d-block ">
                  <div class="carousel-caption d-none d-md-block">
-                    <p class="text-danger">Les iphones de tout type.</p>
+                    <p class="text-primary">Les iphones de tout type.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/s simple.jpg" class="d-block">
+                <img src="img/s1.jpeg" class="d-block">
                  <div class="carousel-caption d-none d-md-block">
-                    <p class="text-danger"> Samsung hp de tout type.</p>
+                    <p class="text-primary"> Samsung hp de tout type.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/OIP.jpg" class="d-block ">
+                <img src="img/c1.jpeg" class="d-block ">
                  <div class="carousel-caption d-none d-md-block">
-                    <p class="text-danger">Les ordinateurs dell de tout type.</p>
+                    <p class="text-primary">Les ordinateurs dell de tout type.</p>
                 </div>
               </div>
             </div>
@@ -103,87 +103,87 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h2>Produits les plus achetés</h2>
+                <h2 class="text-danger">Les ordinateurs</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/1.jpg" class="img-fluid" alt="Produit 1">
-                        <p class="text-danger">Tout type hp</p>
+                        <img src="img/1.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/dell-latitude-e7240_2b09.jpg" class="img-fluid" alt="Produit 2">
-                        <p class="text-danger">Tout type Dell   </p>
+                        <img src="img/dell-latitude-e7240_2b09.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/hp-10130.png" class="img-fluid" alt="Produit 3">
-                        <p class="text-danger">Tout type hp elitbook</p>
+                        <img src="img/hp-10130.png" class="img-fluid" alt="Produit 3" id="img1">
+                        <p class="text-primary text-center">Tout type hp elitbook</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/acer.jpg" class="img-fluid" alt="Produit 4">
-                        <p class="text-danger">Tout type d'acer</p>
+                        <img src="img/acer.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <p class="text-primary text-center">Tout type d'acer</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-12">
-                <h2>Produits les plus achetés</h2>
+                <h2 class="text-danger">Les Téléphons portables</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/maxresdefault.jpg" class="img-fluid" alt="Produit 1">
-                        <p class="text-danger">Tout type hp</p>
+                        <img src="img/maxresdefault.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/OIF.jpg" class="img-fluid" alt="Produit 2">
-                        <p class="text-danger">Tout type Dell   </p>
+                        <img src="img/OIF.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/OIP.jpg" class="img-fluid" alt="Produit 3">
-                        <p class="text-danger">Tout type D'iphone</p>
+                        <img src="img/OIP.jpg" class="img-fluid" alt="Produit 3" id="img1">
+                        <p class="text-primary text-center">Tout type D'iphone</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/s simple.jpg" class="img-fluid" alt="Produit 4">
-                        <p class="text-danger">Tout type Samsung</p>
+                        <img src="img/s simple.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <p class="text-primary text-center">Tout type Samsung</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-12">
-                <h2>Produits les plus achetés</h2>
+                <h2 class="text-danger">Les écouteurs</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/ecouteurs1.jpg" class="img-fluid" alt="Produit 1">
-                        <p class="text-danger">Tout type hp</p>
+                        <img src="img/ecouteurs1.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/ecouter2.jpg" class="img-fluid" alt="Produit 2">
-                        <p class="text-danger">Tout type Dell   </p>
+                        <img src="img/ecouter2.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/ecouter3.jpg" class="img-fluid" alt="Produit 3">
-                        <p class="text-danger">Tout type D'iphone</p>
+                        <img src="img/ecouter3.jpg" class="img-fluid" alt="Produit 3" id="img1">
+                        <p class="text-primary text-center">Tout type D'iphone</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/ecouter4.jpg" class="img-fluid" alt="Produit 4">
-                        <p class="text-danger">Tout type Samsung</p>
+                        <img src="img/ecouter4.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <p class="text-primary text-center">Tout type Samsung</p>
                     </div>
                 </div>
             </div>
             </div>
             <div class="col-md-12">
-                <h2>Produits les plus achetés</h2>
+                <h2 class="text-danger">Les Chargeurs</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/chargeur1.jpg" class="img-fluid" alt="Produit 1">
-                        <p class="text-danger">Tout type hp</p>
+                        <img src="img/chargeur1.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/chargeur2.jpg" class="img-fluid" alt="Produit 2">
-                        <p class="text-danger">Tout type Dell   </p>
+                        <img src="img/chargeur2.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/chargeur3.jpg" class="img-fluid" alt="Produit 3">
-                        <p class="text-danger">Tout type D'iphone</p>
+                        <img src="img/chargeur3.jpg" class="img-fluid" alt="Produit 3" id="img1">
+                        <p class="text-primary text-center">Tout type D'iphone</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/chargeur4.jpg" class="img-fluid" alt="Produit 4">
-                        <p class="text-danger">Tout type Samsung</p>
+                        <img src="img/chargeur4.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <p class="text-primary text-center">Tout type Samsung</p>
                     </div>
                 </div>
             </div>
