--- a/product-list.html
+++ b/product-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product List - E-commerce</title>
+    <title>DIALLO-DIGITAL</title>    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -49,7 +49,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="img/hp-10130.png" class="card-img-top" alt="Product 1">
+                            <img src="img/hp-10130.png" class="card-img-top w-50 h-50" alt="Product 1" id="img1">
                             <div class="card-body">
                                 <h5 class="card-title">hp-x2-1030</h5>
                                 <p class="card-text">220.000f CFA</p>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="img/maxresdefault.jpg" class="card-img-top" alt="Product 2">
+                            <img src="img/maxresdefault.jpg" class="card-img-top w-50 h-50" alt="Product 2" id="img1">
                             <div class="card-body">
                                 <h5 class="card-title">Iphone-15-pro</h5>
                                 <p class="card-text">650.000f CFA</p>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="img/OIF.jpg" class="card-img-top" alt="Product 3">
+                            <img src="img/OIF.jpg" class="card-img-top w-50 h-50" alt="Product 3" id="img1">
                             <div class="card-body">
                                 <h5 class="card-title">SAMSUNG</h5>
                                 <p class="card-text">340.000f CFA</p>
@@ -82,7 +82,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="img/ecouter2.jpg" class="card-img-top" alt="Product 1">
+                            <img src="img/ecouter2.jpg" class="card-img-top w-50 h-50" alt="Product 1" id="img1">
                             <div class="card-body">
                                 <h5 class="card-title">Tout écouteur téléphone portable</h5>
                                 <p class="card-text">2.000f CFA</p>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="img/chargeur1.jpg" class="card-img-top" alt="Product 2">
+                            <img src="img/chargeur1.jpg" class="card-img-top w-50 h-50" alt="Product 2" id="img1">
                             <div class="card-body">
                                 <h5 class="card-title">Tout Chargeur téléphone portable</h5>
                                 <p class="card-text">3.000f CFA</p>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="img/s simple.jpg  " class="card-img-top" alt="Product 3">
+                            <img src="img/s simple.jpg  " class="card-img-top w-50 h-50" alt="Product 3" id="img1">
                             <div class="card-body">
                                 <h5 class="card-title">SAMSUNG en géneral</h5>
                                 <p class="card-text">3.000f et + CFA</p>
