--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
                 <h2 class="text-danger">Les ordinateurs</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/1.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <img src="img/1.jpg" class="img-fluid p-4" alt="Produit 1" id="img1">
                         <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/dell-latitude-e7240_2b09.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <img src="img/dell-latitude-e7240_2b09.jpg" class="img-fluid p-4" alt="Produit 2" id="img1">
                         <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/hp-10130.png" class="img-fluid" alt="Produit 3" id="img1">
+                        <img src="img/hp-10130.png" class="img-fluid p-4" alt="Produit 3" id="img1">
                         <p class="text-primary text-center">Tout type hp elitbook</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/acer.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <img src="img/acer.jpg" class="img-fluid p-4" alt="Produit 4" id="img1">
                         <p class="text-primary text-center">Tout type d'acer</p>
                     </div>
                 </div>
@@ -127,19 +127,19 @@
                 <h2 class="text-danger">Les Téléphons portables</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/maxresdefault.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <img src="img/maxresdefault.jpg" class="img-fluid p-4" alt="Produit 1" id="img1">
                         <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/OIF.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <img src="img/OIF.jpg" class="img-fluid p-4" alt="Produit 2" id="img1">
                         <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/OIP.jpg" class="img-fluid" alt="Produit 3" id="img1">
+                        <img src="img/OIP.jpg" class="img-fluid p-4" alt="Produit 3" id="img1">
                         <p class="text-primary text-center">Tout type D'iphone</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/s simple.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <img src="img/s simple.jpg" class="img-fluid p-4" alt="Produit 4" id="img1">
                         <p class="text-primary text-center">Tout type Samsung</p>
                     </div>
                 </div>
@@ -148,19 +148,19 @@
                 <h2 class="text-danger">Les écouteurs</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/ecouteurs1.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <img src="img/ecouteurs1.jpg" class="img-fluid p-4" alt="Produit 1" id="img1">
                         <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/ecouter2.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <img src="img/ecouter2.jpg" class="img-fluid p-4" alt="Produit 2" id="img1">
                         <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/ecouter3.jpg" class="img-fluid" alt="Produit 3" id="img1">
+                        <img src="img/ecouter3.jpg" class="img-fluid p-4" alt="Produit 3" id="img1">
                         <p class="text-primary text-center">Tout type D'iphone</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/ecouter4.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <img src="img/ecouter4.jpg" class="img-fluid p-4" alt="Produit 4" id="img1">
                         <p class="text-primary text-center">Tout type Samsung</p>
                     </div>
                 </div>
@@ -170,19 +170,19 @@
                 <h2 class="text-danger">Les Chargeurs</h2>
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="img/chargeur1.jpg" class="img-fluid" alt="Produit 1" id="img1">
+                        <img src="img/chargeur1.jpg" class="img-fluid p-4" alt="Produit 1" id="img1">
                         <p class="text-primary text-center">Tout type hp</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/chargeur2.jpg" class="img-fluid" alt="Produit 2" id="img1">
+                        <img src="img/chargeur2.jpg" class="img-fluid p-4" alt="Produit 2" id="img1">
                         <p class="text-primary text-center">Tout type Dell   </p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/chargeur3.jpg" class="img-fluid" alt="Produit 3" id="img1">
+                        <img src="img/chargeur3.jpg" class="img-fluid p-4" alt="Produit 3" id="img1">
                         <p class="text-primary text-center">Tout type D'iphone</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="img/chargeur4.jpg" class="img-fluid" alt="Produit 4" id="img1">
+                        <img src="img/chargeur4.jpg" class="img-fluid p-4" alt="Produit 4" id="img1">
                         <p class="text-primary text-center">Tout type Samsung</p>
                     </div>
                 </div>
