--- a/product-detail.html
+++ b/product-detail.html
@@ -43,13 +43,14 @@
 
     <!-- Product Detail -->
     <div class="container">
-        <div class="row">
+        <div class="row col-12">
             <div class="col-md-6">
                 <img src="img/hp-10130.png" class="img-fluid" alt="Product 1">
             </div>
             <div class="col-md-6">
                 <h2>Hp-x2-1030</h2>
                 <p>220.000f CFA</p>
+                frequence : 2.7GHZ
                 <p> hp 1030 <br><br>Core i7 <br> <br> Disque Dur 500Go SSD <br><br> Ram 16 <br><br>  .</p>
                 <button class="btn btn-primary">Ajouter dans le Panier</button>
             </div>
