--- a/inscrip.html
+++ b/inscrip.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="product-list.html" id="nav">Liste-des-produits</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="product-detail.html" id="nav">Détails d’un produit</a>
+                    <a class="nav-link" href="Nos-partenaires.html" id="nav">Nos-partenaires</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html" id="nav">Contactez-nous</a>
